--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
     "js-logger": "^1.6.1",
+    "pdf-lib": "^1.16.0",
+    "pdfjs": "^2.4.2",
     "proxy-agent": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
