--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "ajv": "^7.1.1",
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
     "js-logger": "^1.6.1",
