--- a/package.json
+++ b/package.json
@@ -26,20 +26,26 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "ajv": "^7.1.1",
+    "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
+    "fast-xml-parser": "^3.18.0",
+    "he": "^1.2.0",
     "js-logger": "^1.6.1",
+    "jsonpath": "^1.1.0",
     "pdf-lib": "^1.16.0",
     "pdfjs": "^2.4.2",
     "proxy-agent": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "serverless-express": "^2.0.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/aws-lambda": "^8.10.72",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
