--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
     "fast-xml-parser": "^3.18.0",
+    "gulp": "^4.0.2",
+    "gulp-chmod": "^3.0.0",
+    "gulp-install": "^1.1.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-zip": "^5.1.0",
     "he": "^1.2.0",
     "js-logger": "^1.6.1",
     "jsonpath": "^1.1.0",
