--- a/ecm-lambda.yaml
+++ b/ecm-lambda.yaml
@@ -2,6 +2,10 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: ECM as Lambda.
 
+Parameters:
+  FoundationStackName:
+    Description: Name of the stack that contains common and shared resources
+    Type: String
 Resources:
   ECMNestJSFunction:
     Type: AWS::Serverless::Function
@@ -12,7 +16,8 @@ Resources:
       MemorySize: 1512
       Timeout: 60
       Layers:
-        - arn:aws:lambda:eu-west-1:181929501415:layer:NestLayer:1
+        Value:
+          Fn::ImportValue: !Sub ${FoundationStackName}-DOCSTORELayer
       Events:
         GetResource:
           Type: Api
@@ -25,7 +30,7 @@ Resources:
               Action:
                 - 'lambda:GetLayerVersion'
               Resource:
-                - 'arn:aws:lambda:*:1234567890:layer:*:*'
+                - 'arn:aws:lambda:*:*:layer:*:*'
             - Effect: "Allow"
               Action:
                 - 'logs:CreateLogGroup'
