--- a/package.json
+++ b/package.json
@@ -22,21 +22,18 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.11.0",
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.12",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/core": "^7.6.12",
+    "@nestjs/platform-express": "^7.6.12",
     "@types/uuid": "^8.3.0",
+    "@vendia/serverless-express": "^4.3.4",
     "ajv": "^7.1.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
     "fast-xml-parser": "^3.18.0",
-    "gulp": "^4.0.2",
-    "gulp-chmod": "^3.0.0",
-    "gulp-install": "^1.1.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-zip": "^5.1.0",
+    "form-data": "^4.0.0",
     "he": "^1.2.0",
     "js-logger": "^1.6.1",
     "jsonpath": "^1.1.0",
@@ -46,7 +43,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "serverless-express": "^2.0.11",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -60,9 +56,15 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "del": "^6.0.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "gulp": "^4.0.2",
+    "gulp-chmod": "^3.0.0",
+    "gulp-install": "^1.1.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-zip": "^5.1.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.1.2",
