--- a/package.json
+++ b/package.json
@@ -26,15 +26,12 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.12",
     "@nestjs/platform-express": "^7.6.12",
-    "@types/uuid": "^8.3.0",
-    "@vendia/serverless-express": "^4.3.4",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.14.6",
+    "@vendia/serverless-express": "^4.3.0",
     "ajv": "^7.1.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "fast-xml-parser": "^3.18.0",
     "form-data": "^4.0.0",
     "he": "^1.2.0",
@@ -49,6 +46,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
+    "@types/aws-lambda": "^8.10.72",
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.6",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
