--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.608.0",
     "axios": "^0.21.1",
+    "dynamodb-toolbox": "^0.3.3",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.18.0",
     "form-data": "^4.0.0",
     "he": "^1.2.0",
     "js-logger": "^1.6.1",
     "jsonpath": "^1.1.0",
+    "md5": "^2.3.0",
     "pdf-lib": "^1.16.0",
     "pdfjs": "^2.4.2",
     "proxy-agent": "^4.0.1",
