post/Get and index in elastic

--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,4 @@
 DOCUMENTS_TABLE_NAME=documents-store-dev
-TIKA_URL=http://localhost:9999/tika/form
 BUCKET_NAME=documents-store-181929501415-dev
-DOCUMENT_EXTRACT_URL=http://localhost:9200
-USE_DISCOVERED_ID=true
+DOCUMENT_EXTRACT_URL=https://elk-v2.digital-nonprod.aws.cld.cma-cgm.com
+ENV=uat
