post/Get and index in elastic

--- a/dev.env
+++ b/dev.env
@@ -2,3 +2,6 @@ DOCUMENTS_TABLE_NAME=documents-store-dev
 BUCKET_NAME=documents-store-181929501415-dev
 DOCUMENT_EXTRACT_URL=https://elk-v2.digital-nonprod.aws.cld.cma-cgm.com
 ENV=uat
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
+NODE_EXTRA_CA_CERTS=C:\Users\ho.ckervoazou\Documents\Usefull-Digital-Stuff\certificates\zscaler.cer
